--- a/public/aula.css
+++ b/public/aula.css
@@ -40,6 +40,11 @@ a:hover {
 .talk-speaker {
   font-weight: bold;
   color: #594f4f;
+  background-color: #EBE8D9;
+  padding: 0 0.2rem;
+  -webkit-border-radius: 0.3rem;
+  -moz-border-radius: 0.3rem;
+  border-radius: 0.3rem;
 }
 
 .talk-location {
