--- a/public/aula.css
+++ b/public/aula.css
@@ -84,3 +84,29 @@ hr {
   font-size: 2rem;
   margin-top: 3rem;
 }
+
+.home-wrapper {
+  font-size: 1.8rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  margin: 0 1rem 1rem 1rem;
+  color: #444;
+  text-align: center;
+}
+
+.home-wrapper a {
+  color: #444;
+}
+
+.home-wrapper > div {
+  background-color: #ebe8d9;
+  -webkit-border-radius: 0.3rem;
+  -moz-border-radius: 0.3rem;
+  border-radius: 0.3rem;
+  padding: 1rem;
+}
+
+.logo {
+  font-family: "Lobster", "cursive";
+  font-weight: normal;
+}
