--- a/public/aula.css
+++ b/public/aula.css
@@ -87,8 +87,7 @@ hr {
 
 .home-wrapper {
   font-size: 1.8rem;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
+  font-family: "Open Sans", sans-serif;
   margin: 0 1rem 1rem 1rem;
   color: #444;
   text-align: center;
